--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nakamura",
     "version": "1.0.0",
-    "description": "medical-site",
+    "description": "qwintet",
     "main": "index.js",
     "scripts": {
         "dev-compile:css": "sass sass/main.scss css/style.css --style expanded --watch | postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.css",
